[gd_scene load_steps=4 format=3 uid="uid://bjxhcr1utkl23"]

[ext_resource type="Script" path="res://src/ui/resize_canvas_dialog.gd" id="1_870cy"]
[ext_resource type="Texture2D" uid="uid://cyinnka1vuja5" path="res://icons/size_linked.svg" id="2_5osy4"]

[sub_resource type="ButtonGroup" id="ButtonGroup_sgfwq"]

[node name="ResizeCanvasDialog" type="Window"]
auto_translate_mode = 1
disable_3d = true
title = "Resize Canvas"
position = Vector2i(0, 61)
size = Vector2i(300, 125)
exclusive = true
script = ExtResource("1_870cy")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -180.0
offset_top = -110.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_type_variation = &"ButtonBarContainer"

[node name="CancelButton" type="Button" parent="Panel/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "Cancel"

[node name="OkButton" type="Button" parent="Panel/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "Ok"

[node name="GridContainer" type="GridContainer" parent="."]
offset_left = 25.0
offset_top = 10.0
offset_right = 265.0
offset_bottom = 71.0
size_flags_horizontal = 8
theme_override_constants/h_separation = 5
theme_override_constants/v_separation = 5
columns = 5

[node name="Label4" type="Label" parent="GridContainer"]
layout_mode = 2
text = "Width:   "
horizontal_alignment = 2

[node name="WidthEdit" type="LineEdit" parent="GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "100"
alignment = 2
max_length = 5
virtual_keyboard_type = 2
select_all_on_focus = true

[node name="Label7" type="Label" parent="GridContainer"]
layout_mode = 2
text = "px   "
horizontal_alignment = 2

[node name="WidthEditPercent" type="LineEdit" parent="GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "100"
alignment = 2
max_length = 5
virtual_keyboard_type = 2
select_all_on_focus = true

[node name="Label8" type="Label" parent="GridContainer"]
layout_mode = 2
text = "%"
horizontal_alignment = 2

[node name="Label2" type="Label" parent="GridContainer"]
layout_mode = 2
text = "Height:   "
horizontal_alignment = 2

[node name="HeightEdit" type="LineEdit" parent="GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "100"
alignment = 2
max_length = 5
virtual_keyboard_type = 2
select_all_on_focus = true

[node name="Label9" type="Label" parent="GridContainer"]
layout_mode = 2
text = "px   "
horizontal_alignment = 2

[node name="HeightEditPercent" type="LineEdit" parent="GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "100"
alignment = 2
max_length = 5
virtual_keyboard_type = 2
select_all_on_focus = true

[node name="Label10" type="Label" parent="GridContainer"]
layout_mode = 2
text = "%"
horizontal_alignment = 2

[node name="Label11" type="Label" parent="GridContainer"]
layout_mode = 2
text = "Align:   "
horizontal_alignment = 2

[node name="LinkButton" type="Button" parent="."]
unique_name_in_owner = true
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -30.0
offset_top = 23.0
offset_right = -14.0
offset_bottom = 39.0
grow_horizontal = 0
size_flags_horizontal = 0
size_flags_vertical = 0
theme_type_variation = &"IconButton"
icon = ExtResource("2_5osy4")
icon_alignment = 1
expand_icon = true

[node name="GridContainer2" type="GridContainer" parent="."]
offset_left = 91.0
offset_top = 54.0
offset_right = 153.0
offset_bottom = 116.0
theme_override_constants/h_separation = 1
theme_override_constants/v_separation = 1
columns = 3

[node name="AlignTL" type="Button" parent="GridContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(15, 15)
layout_mode = 2
theme_type_variation = &"AlignmentButton"
toggle_mode = true
button_pressed = true
button_group = SubResource("ButtonGroup_sgfwq")

[node name="AlignT" type="Button" parent="GridContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(15, 15)
layout_mode = 2
theme_type_variation = &"AlignmentButton"
toggle_mode = true
button_group = SubResource("ButtonGroup_sgfwq")

[node name="AlignTR" type="Button" parent="GridContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(15, 15)
layout_mode = 2
theme_type_variation = &"AlignmentButton"
toggle_mode = true
button_group = SubResource("ButtonGroup_sgfwq")

[node name="AlignL" type="Button" parent="GridContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(15, 15)
layout_mode = 2
theme_type_variation = &"AlignmentButton"
toggle_mode = true
button_group = SubResource("ButtonGroup_sgfwq")

[node name="AlignC" type="Button" parent="GridContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(15, 15)
layout_mode = 2
theme_type_variation = &"AlignmentButton"
toggle_mode = true
button_group = SubResource("ButtonGroup_sgfwq")

[node name="AlignR" type="Button" parent="GridContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(15, 15)
layout_mode = 2
theme_type_variation = &"AlignmentButton"
toggle_mode = true
button_group = SubResource("ButtonGroup_sgfwq")

[node name="AlignBL" type="Button" parent="GridContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(15, 15)
layout_mode = 2
theme_type_variation = &"AlignmentButton"
toggle_mode = true
button_group = SubResource("ButtonGroup_sgfwq")

[node name="AlignB" type="Button" parent="GridContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(15, 15)
layout_mode = 2
theme_type_variation = &"AlignmentButton"
toggle_mode = true
button_group = SubResource("ButtonGroup_sgfwq")

[node name="AlignBR" type="Button" parent="GridContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(15, 15)
layout_mode = 2
theme_type_variation = &"AlignmentButton"
toggle_mode = true
button_group = SubResource("ButtonGroup_sgfwq")
